--- a/LibraryManagement-main/server/package.json
+++ b/LibraryManagement-main/server/package.json
@@ -35,7 +35,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "mongodb": "^4.11.0"
+    "mongodb": "^4.11.0",
+    "nodemon": "^2.0.20"
   }
 }
